--- a/protein_3d_structure_nano_stanza/template.hbs
+++ b/protein_3d_structure_nano_stanza/template.hbs
@@ -2,16 +2,25 @@
 
 <html>
   <head>
-    <title>Protein 3D Structure Image</title>
-    {{#each css_uri}}
-    <link rel="stylesheet" href="{{this}}" />
-    {{/each}}
+    <meta charset='utf-8'>
+    <title>Protein 3D Structure</title>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/stanza/assets/nanostanza.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/bootstrap.min.js"></script>
-    {{adjust_iframe_height_script}}
+    <script src="/stanza/assets/nanostanza.js"></script>
+    <script type="text/javascript">
+      var NANO_STANZA = {};
+      NANO_STANZA.EXTENSION = [];
+      NANO_STANZA.EXTENSION.push({label: "link", functionType: "blank", value: "{{pdb.first.url}}"});
+      NANO_STANZA.EXTENSION.push({label: "open this image", functionType: "blank", value: "{{pdb.first.img_url}}"});
+    </script>
   </head>
 
   <body>
-      <a href={{pdb.first.url}}><img src={{pdb.first.img_url}} alt={{pdb.first.img_url}} width=400 height=400></a>
+    <h1>Protein 3D Structure</h1>
+    <div id="main-view">
+      <img src={{pdb.first.img_url}} alt={{pdb.first.img_url}} class="single-image-view">
+    </div>
   </body>
 </html>
