--- a/gene_length_nano_stanza/template.hbs
+++ b/gene_length_nano_stanza/template.hbs
@@ -14,7 +14,7 @@
   <body>
     <h1>{{title}}</h1>
     <div id="main-view">
-      <p class="single-text-view text-size-adjust text-size-middle">{{result.first.gene_length}}<small>bp</small></p>
+      <p class="single-text-view text-size-adjust text-size-middle">{{results.first.gene_length}}<small>bp</small></p>
     </div>
   </body>
 </html>
