--- a/protein_3d_structure_nano_stanza/template.hbs
+++ b/protein_3d_structure_nano_stanza/template.hbs
@@ -18,9 +18,9 @@
   </head>
 
   <body>
-    <h1>Protein 3D Structure</h1>
+    <h1>3D structure</h1>
     <div id="main-view">
-      <img src={{pdb.first.img_url}} alt={{pdb.first.img_url}} class="single-image-view">
+      <img class="single-image-view" src={{pdb.first.img_url}} alt={{pdb.first.img_url}}>
     </div>
   </body>
 </html>
