--- a/organism_genome_size_nano_stanza/template.hbs
+++ b/organism_genome_size_nano_stanza/template.hbs
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>Organism Genome Size</title>
+    <title>Organism genome size</title>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/stanza/assets/nanostanza.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <h1>Organism Genome Size</h1>
+    <h1>Genome size</h1>
     <div id="main-view">
     {{#if genome_size}}
       <p class="single-text-view text-size-adjust text-size-middle">{{genome_size.mantissa}}<small>{{genome_size.unit}}</small></p>
