--- a/protein_ec_number_nano_stanza/template.hbs
+++ b/protein_ec_number_nano_stanza/template.hbs
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <h1>Protein EC Number</h1>
+    <h1>EC number</h1>
     <div id="main-view">
       <p class="single-text-view text-size-adjust text-size-middle">{{features.first.ec_number}}</p>
     </div>
