--- a/protein_3d_structure_nano_stanza/template.hbs
+++ b/protein_3d_structure_nano_stanza/template.hbs
@@ -12,8 +12,8 @@
     <script type="text/javascript">
       var NANO_STANZA = {};
       NANO_STANZA.EXTENSION = [];
-      NANO_STANZA.EXTENSION.push({label: "link", functionType: "blank", value: "{{pdb.first.url}}"});
-      NANO_STANZA.EXTENSION.push({label: "open this image", functionType: "blank", value: "{{pdb.first.img_url}}"});
+      NANO_STANZA.EXTENSION.push({label: "Link", functionType: "blank", value: "{{pdb.first.url}}"});
+      NANO_STANZA.EXTENSION.push({label: "Open this image", functionType: "blank", value: "{{pdb.first.img_url}}"});
     </script>
   </head>
 
