--- a/organism_gene_number_nano_stanza/template.hbs
+++ b/organism_gene_number_nano_stanza/template.hbs
@@ -17,7 +17,7 @@
     {{#if genome_stats}}
       <p class="multiline-text-view">Gene: {{genome_stats.gene_number}}<br/>rRNA: {{genome_stats.rrna_number}}<br/>tRNA: {{genome_stats.trna_number}}</p>
     {{else}}
-      No data
+      <img src="/stanza/assets/no_data.svg" />
     {{/if}}
     </div>
   </body>
