--- a/organism_genome_size_nano_stanza/template.hbs
+++ b/organism_genome_size_nano_stanza/template.hbs
@@ -17,7 +17,7 @@
     {{#if genome_size}}
       <p class="single-text-view text-size-adjust text-size-middle">{{genome_size.mantissa}}<small>{{genome_size.unit}}</small></p>
     {{else}}
-      No data
+      <img src="/stanza/assets/no_data.svg" />
     {{/if}}
     </div>
   </body>
