--- a/protein_3d_structure_nano_stanza/template.hbs
+++ b/protein_3d_structure_nano_stanza/template.hbs
@@ -12,15 +12,15 @@
     <script type="text/javascript">
       var NANO_STANZA = {};
       NANO_STANZA.EXTENSION = [];
-      NANO_STANZA.EXTENSION.push({label: "Link", functionType: "blank", value: "{{pdb.first.url}}"});
-      NANO_STANZA.EXTENSION.push({label: "Open this image", functionType: "blank", value: "{{pdb.first.img_url}}"});
+      NANO_STANZA.EXTENSION.push({label: "Link", functionType: "blank", value: "{{pdb.url}}"});
+      NANO_STANZA.EXTENSION.push({label: "Open this image", functionType: "blank", value: "{{pdb.img_url}}"});
     </script>
   </head>
 
   <body>
     <h1>3D structure</h1>
     <div id="main-view">
-      <img class="single-image-view" src={{pdb.first.img_url}} alt={{pdb.first.img_url}}>
+      <img class="single-image-view" src={{pdb.img_url}} alt={{pdb.img_url}}>
     </div>
   </body>
 </html>
