--- a/protein_ec_number_nano_stanza/template.hbs
+++ b/protein_ec_number_nano_stanza/template.hbs
@@ -14,7 +14,11 @@
   <body>
     <h1>EC number</h1>
     <div id="main-view">
-      <p class="single-text-view text-size-adjust text-size-middle">{{features.first.ec_number}}</p>
+      {{#if feature}}
+        <p class="single-text-view text-size-adjust text-size-middle">{{feature.ec_number}}</p>
+      {{else}}
+        <img src='/stanza/assets/no_data.svg'>
+      {{/if}}
     </div>
   </body>
 </html>
